Add video download for tweets (macOS, yt-dlp)
Download videos from tweets via the extension popup using yt-dlp (with
direct MP4 fallback). Requires the HTTP daemon (macOS only).

- Popup shows "Video detected" section when viewing a tweet with video
- yt-dlp runs with --cookies-from-browser chrome for authenticated access
- Progress polling survives popup close/reopen
- Filenames use yyyy.mm.dd post date prefix
- Stealth warning: video downloads make extra requests to X
- install.sh captures user PATH for launchd plist (yt-dlp discovery)
- install.sh rejects sudo, waits for bootout before re-bootstrap

--- a/native-host/com.xtap.daemon.plist
+++ b/native-host/com.xtap.daemon.plist
@@ -13,6 +13,8 @@
     <dict>
         <key>HOME</key>
         <string>__HOME_DIR__</string>
+        <key>PATH</key>
+        <string>__PATH__</string>
     </dict>
     <key>RunAtLoad</key>
     <true/>
