Improve xtap_core.py test coverage to 100%
Add tests for write_log, write_dump, test_path, get_download_status,
and _date_prefix exception branch. Exclude subprocess/network functions
(check_ytdlp, download_direct, start_download, _download_with_ytdlp)
via pragma. Scope coverage to xtap_core.py via .coveragerc.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: pip install pytest pytest-cov
 
       - name: Run Python tests
-        run: python3 -m pytest tests/test_xtap_core.py -v --cov=native-host --cov-report=xml:coverage-python.xml
+        run: python3 -m pytest tests/test_xtap_core.py -v --cov --cov-report=xml:coverage-python.xml
 
       - name: Run JS tests with coverage
         run: npx c8 --reporter=lcov --report-dir=coverage-js node --test tests/tweet-parser.test.mjs
